[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Manager/FakeServerManager/FakeServerManager.gd" type="Script" id=1]
[ext_resource path="res://Game/Manager/FakeServerManager/FakeMobHandler.gd" type="Script" id=2]
[ext_resource path="res://Game/Manager/FakeServerManager/FakeItemHandler.gd" type="Script" id=3]
[ext_resource path="res://Game/Manager/FakeServerManager/FakeInteractionHandler.gd" type="Script" id=4]

[node name="FakeServerManager" type="Node"]
script = ExtResource( 1 )

[node name="EnvironmentUpdate" type="Timer" parent="."]
wait_time = 5.0

[node name="FakeMobHandler" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CastTimer" type="Timer" parent="FakeMobHandler"]
one_shot = true

[node name="FakeItemHandler" type="Node" parent="."]
script = ExtResource( 3 )
fake_server_manager_path = NodePath("..")

[node name="FakeInteractionHandler" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="timeout" from="EnvironmentUpdate" to="." method="_on_EnvironmentUpdate_timeout"]
